--- a/server/package.json
+++ b/server/package.json
@@ -5,10 +5,8 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon server.js",
     "dev": "nodemon server.js",
-    "build" : "npm i",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm i"
   },
   "author": "Shubham Mudgal",
   "license": "ISC",
